--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
@@ -125,6 +125,7 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
   .navbar_fix .navbar-default .navbar-header .navbar_header_content .navbar-toggle.collapsed .bottom-bar { transform: rotate(0); }
   .navbar_fix .navbar-default .navbar-header .navbar_header_content .dropdown-menu { padding: 5px; background-color: #f4f4f4; border: 1px solid #e7e7e7; -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
   .navbar_fix .navbar-default .navbar-header .navbar_header_content .dropdown-menu .panel, .navbar_fix .navbar-default .navbar-header .navbar_header_content .dropdown-menu .panel_clean { margin: 0 !important; padding: 0 !important; border: initial !important; }
+  .navbar_fix .navbar-default .navbar-header .navbar_header_content .dropdown-menu #panel_id_2 { box-shadow: none !important; }
   .navbar_fix .navbar-default .navbar-header .navbar_header_icon { padding-right: 2px; }
   .navbar_fix .navbar-default .navbar-header .navbar_header_icon .dropdown-toggle { margin-left: 0; margin-right: 0; }
   .navbar_fix .navbar-default .navbar-collapse { display: block !important; margin-top: 7px; border-top: 1px solid #e7e7e7; }
@@ -141,9 +142,10 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
   .page_comment .avatar_reply { left: 65px; }
   .page_comment .message { margin-top: 10px; }
   #panel_id_1 { margin-left: -15px; margin-right: -15px; }
-  #panel_id_2 { width: 250px; padding-right: 10px !important; padding-left: 10px !important; box-shadow: none !important; }
+  #panel_id_2 { width: 250px; padding-right: 10px !important; padding-left: 10px !important; }
   #panel_id_5 { width: 200px !important; } }
-@media (min-width: 992px) { .button_authentication_desktop { display: none; position: absolute; top: 27px; right: 35px; color: #ffffff; cursor: pointer; z-index: 1010; }
+@media (min-width: 992px) { .navbar_fix .navbar-default .navbar-collapse { padding-left: 0; padding-right: 0; }
+  .button_authentication_desktop { display: none; position: absolute; top: 27px; right: 35px; color: #ffffff; cursor: pointer; z-index: 1010; }
   .maintenance_content { margin: 0 10px 20px 10px; }
   .maintenance_content img { max-width: 60%; }
   .maintenance_content div { font-size: 2.2vw; }
@@ -152,8 +154,8 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
   .page_comment img { margin-bottom: 20px; }
   .page_comment .avatar_reply { left: 55%; }
   .page_comment .message { margin-top: 13px; }
-  #panel_id_4 { position: absolute; top: 31px; right: 40px; z-index: 1010; }
-  #panel_id_5 { position: absolute; top: 31px; right: 130px; z-index: 1010; } }
+  #panel_id_4 { position: absolute; top: 34px; right: 105px; z-index: 1010; }
+  #panel_id_5 { position: absolute; top: 34px; right: 195px; z-index: 1010; } }
 body { position: absolute; top: 0; right: 0; left: 0; min-height: 100%; font-family: "pt_sans", sans-serif; font-size: 14px; }
 
 table, .table { font-family: "pt_sans", sans-serif; font-size: 14px; margin-bottom: 0; }
@@ -201,7 +203,7 @@ p { margin: 0; }
 
 .panel-heading { padding: 10px 0; border-bottom: 1px solid #e7e7e7; }
 
-.panel-body { padding: 15px 0; }
+.panel-body { padding: 15px 0; border: 1px solid transparent; }
 
 .page_header { margin: 0; margin-bottom: 20px; }
 .page_header h1, .page_header h2, .page_header h3, .page_header h4, .page_header h5, .page_header h6, .page_header h7 { margin-top: 0; margin-bottom: 0; }
@@ -258,7 +260,7 @@ p { margin: 0; }
 
 .avatar { border-radius: 50%; max-width: 80px; max-height: 80px; }
 
-.maintenance_authentication { display: block !important; position: initial !important; width: 320px !important; margin: auto !important; -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+.maintenance_authentication { display: block !important; position: initial !important; width: 250px !important; margin: auto !important; -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
 
 .maintenance_content { position: relative; text-align: center; }
 .maintenance_content img { height: auto; }
