--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_creation.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_creation.html.twig
@@ -2,10 +2,10 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h3 class="form_title">{% trans %}role_user_creation_1{% endtrans %}</h3>
-        <form id="cp_role_user_creation_form" action="{{path("cp_role_user_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <h3 class="form_title">{% trans %}roleUser_creation_1{% endtrans %}</h3>
+        <form id="form_cp_roleUser_creation" action="{{path("cp_roleUser_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div class="form-group">
-                {{form_label(form.level, "role_user_creation_2")}}
+                {{form_label(form.level, "roleUser_creation_2")}}
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-header"></i></span>
                     {{form_errors(form.level)}}
