--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_profile.html.twig
@@ -2,10 +2,10 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h3 class="form_title">{% trans %}role_user_profile_1{% endtrans %}</h3>
-        <form id="cp_role_user_profile_form" action="{{path("cp_role_user_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <h3 class="form_title">{% trans %}roleUser_profile_1{% endtrans %}</h3>
+        <form id="form_cp_roleUser_profile" action="{{path("cp_roleUser_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div class="form-group">
-                {{form_label(form.level, "role_user_profile_2")}}
+                {{form_label(form.level, "roleUser_profile_2")}}
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-header"></i></span>
                     {{form_errors(form.level)}}
@@ -19,7 +19,7 @@
         </form>
         
         {% if is_granted("ROLE_ADMIN") == true and response.values.id > 2 %}
-            {{-include("@UebusaitoBundleViews/render/control_panel/role_user_deletion.html.twig")-}}
+            {{-include("@UebusaitoBundleViews/render/control_panel/roleUser_deletion.html.twig")-}}
         {% endif %}
     </div>
 </div>
