--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_selection.html.twig
@@ -1,7 +1,7 @@
-<h3 class="form_title">{% trans %}role_user_selection_1{% endtrans %}</h3>
+<h3 class="form_title">{% trans %}roleUser_selection_1{% endtrans %}</h3>
 
-<div id="cp_role_user_selection_desktop" class="display_desktop">
-    <div id="cp_role_user_selection_result_desktop">
+<div id="cp_roleUser_selection_desktop" class="display_desktop">
+    <div id="cp_roleUser_selection_result_desktop">
         {{-include("@UebusaitoBundleViews/include/table_and_pagination.html.twig")-}}
 
         <div class="overflow_y_hidden margin_bottom">
@@ -9,22 +9,22 @@
                 <thead class="table_thead">
                     <tr>
                         <th class="cursor_pointer">
-                            {% trans %}role_user_selection_2{% endtrans %}
+                            {% trans %}roleUser_selection_2{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}role_user_selection_3{% endtrans %}
+                            {% trans %}roleUser_selection_3{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}role_user_selection_4{% endtrans %}
+                            {% trans %}roleUser_selection_4{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}role_user_selection_5{% endtrans %}
+                            {% trans %}roleUser_selection_5{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
@@ -36,16 +36,16 @@
             </table>
         </div>
     </div>
-    <button id="cp_role_user_selection_button_desktop" class="button_custom" type="button">{% trans %}button_4{% endtrans %}</button>
+    <button id="cp_roleUser_selection_button_desktop" class="button_custom" type="button">{% trans %}button_4{% endtrans %}</button>
 </div>
 
-<div id="cp_role_user_selection_mobile" class="display_mobile">
+<div id="cp_roleUser_selection_mobile" class="display_mobile">
     {% form_theme form "bootstrap_3_layout.html.twig" %}
 
     <div class="row">
         <div class="col-md-6">
-            <form id="cp_role_user_selection_form_mobile" action="{{path("cp_role_user_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-                {{form_row(form.id, {'label': "role_user_selection_6"})}}
+            <form id="form_cp_roleUser_selection_mobile" action="{{path("cp_roleUser_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+                {{form_row(form.id, {'label': "roleUser_selection_6"})}}
 
                 {{form_widget(form._token)}}
 
@@ -55,4 +55,4 @@
     </div>
 </div>
             
-<div id="cp_role_user_selection_result"></div>
+<div id="cp_roleUser_selection_result"></div>
