--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/language_text.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/language_text.html.twig
@@ -12,7 +12,7 @@
 
     <div class="language_container horizontal_center">
         <img id="language_flag_{{app.request.getLocale()}}" class="language_text_flag display_inline" src="{{asset("bundles/uebusaito/images/templates/" ~ settingRow['template'] ~ "/lang/" ~ app.request.getLocale() ~ ".png")}}" alt="{{app.request.getLocale()}}.png"/>
-        <form id="language_text_form" class="form_language_text display_inline" action="{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_language_text" class="form_language_text display_inline" action="{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.codeText, {'label': false})}}
 
             {{form_widget(form._token)}}
