--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
@@ -4,7 +4,7 @@
     <div class="col-md-6">
         {% if response.values.userId == null %}
             <h3 class="margin_clear">{% trans %}recover_password_1{% endtrans %}</h3>
-            <form id="recover_password_form" class="margin_top" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            <form id="form_recover_password" class="margin_top" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                 <div class="form-group">
                     {{form_label(form.email, "recover_password_2")}}
                     <div class="input-group">
@@ -20,7 +20,7 @@
             </form>
         {% else %}
             <h3 class="margin_clear">{% trans %}recover_password_3{% endtrans %}</h3>
-            <form id="change_password_form" class="margin_top" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            <form id="form_change_password" class="margin_top" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                 <div class="form-group">
                     {{form_label(form.password, "recover_password_4")}}
                     <div class="input-group">
